# cowork-semantic-search

./: .gitignore  .mcp.json  README.md  pyproject.toml
server/: indexer.py  main.py  parsers.py  search.py  store.py
tests/: helpers.py  test_mcp_tools.py  test_parsers.py  test_search.py  test_store.py
